--- a/index.css
+++ b/index.css
@@ -1,17 +1,17 @@
 body {
+  font-family: "Karla", sans-serif;
   margin: 0;
   padding: 0;
-  font-family: "DM Serif Text", serif;
-  font-weight: 400;
-  font-style: normal;
 }
 
 nav {
-  height: 30px;
-  background-color: aquamarine;
+  background-color: beige;
+  padding: 5px;
   height: 30px;
   display: flex;
   align-items: center;
+  position: fixed;
+  width: 100%;
 }
 
 nav > h3 {
@@ -19,7 +19,22 @@ nav > h3 {
 }
 
 #blog-list {
-  padding:
-    30px,
-    10px 10px;
+  padding: 10px;
+}
+
+form {
+  padding: 60px 10px 10px;
+  display: grid;
+  background-color: lightblue;
+}
+
+input#post-title,
+textarea#post-body {
+  margin-bottom: 10px;
+}
+
+button {
+  padding: 10px;
+  font-size: 18px;
+  cursor: pointer;
 }
